# verity_uw

./: .coveragerc  .gitignore  CLAUDE.md  Dockerfile  README.md  VERITY_COMBINED_PRD_v3.md  docker-compose.yml  pytest.ini  requirements.txt
edms/: Dockerfile  pyproject.toml
edms/src/edms/: __init__.py  client.py  models.py  schema - edms.sql  seed.py
edms/src/edms/core/: db.py  storage.py  text_extractor.py
edms/src/edms/service/: collection_routes.py  folder_routes.py  governance_routes.py  main.py  routes.py  task_routes.py  ui.py
edms/src/edms/service/static/: verity.css
edms/src/edms/service/templates/: _preview_fragment.html  base.html  collections.html  document_detail.html  document_types.html  documents.html  folders.html  tags.html  tasks.html  upload.html
edms/src/edms/utils/: logging.py
insurance_docgen/: README.md  pyproject.toml
insurance_docgen/profiles/: companies.json
insurance_docgen/src/insurance_docgen/: __init__.py  __main__.py  cli.py  generator.py  models.py  pdf_filler.py  text_filler.py
insurance_docgen/src/insurance_docgen/templates/field_maps/: DOandEPLI.json  acord-125.json
insurance_docgen/src/insurance_docgen/templates/text/: board_resolution.txt.j2  financial_statement.txt.j2  loss_run.txt.j2  supplemental_gl.txt.j2
verity/: pyproject.toml
verity/src/verity/: __init__.py  cli.py  main.py
verity/src/verity/client/: __init__.py  inprocess.py
verity/src/verity/contracts/: __init__.py  config.py  decision.py  enums.py  envelope.py  inference.py  mock.py  pipeline.py  prompt.py  run.py  testing.py  tool.py
verity/src/verity/core/: client.py  decisions.py  execution.py  lifecycle.py  metrics.py  mock_context.py  pipeline_executor.py  registry.py  reporting.py  test_runner.py  testing.py  validation_runner.py
verity/src/verity/db/: connection.py  migrate.py  schema.sql  schema_compliance.sql  schema_compliance_views.sql  schema_intake.sql
verity/src/verity/db/migrations/: __init__.py  unified_wiring.py
verity/src/verity/db/queries/: authoring.sql  compliance.sql  connectors.sql  decisions.sql  hitl_override.sql  intake.sql  lifecycle.sql  models.sql  quotas.sql  registration.sql  registry.sql  reporting.sql  runs.sql  testing.sql
verity/src/verity/governance/: __init__.py  coordinator.py  decisions.py  envelope_builder.py  intake.py  lifecycle.py  models.py  plan_generator.py  quotas.py  registry.py  reporting.py  runs.py
verity/src/verity/governance/yaml_io/: __init__.py  exporter.py  importer.py  intake.py  models.py  serialization.py
verity/src/verity/models/: __init__.py  agent.py  application.py  compliance.py  connector.py  decision.py  inference_config.py  intake.py  lifecycle.py  mcp.py  pipeline.py  prompt.py  reporting.py  run.py  task.py  testing.py  tool.py
verity/src/verity/reporting/: __init__.py  _template_authoring.py  composers.py  engine.py  render.py
verity/src/verity/reporting/templates/: approval_audit_log.docx  decision_audit_trail.docx  fairness_validation_summary.docx  intake_impact_assessment_register.docx  intake_inventory.docx  model_inventory.docx  naic_exhibit_c.docx  workflow_audit_trail.docx
verity/src/verity/runtime/: __init__.py  connectors.py  decisions_writer.py  engine.py  fixture_backend.py  mcp_client.py  metrics.py  mock_context.py  pipeline.py  runs_writer.py  runtime.py  sdk_backend.py  test_runner.py  validation_runner.py  worker.py
verity/src/verity/setup/: compliance_seed_data.yaml  compliance_seed_reports.yaml  compliance_seed_static.yaml  export_compliance.py  publish_compliance.py  seed_compliance.py  seed_intake_example.py
verity/src/verity/utils/: logging.py
verity/src/verity/web/: app.py  routes.py  studio_app.py  studio_intake_routes.py  studio_routes.py
verity/src/verity/web/api/: __init__.py  applications.py  authoring.py  compliance_meta.py  decisions.py  draft_edit.py  feed.py  intake.py  lifecycle.py  models.py  overrides.py  quotas.py  registry.py  reporting.py  router.py  runs.py  runtime.py  schemas.py  usage.py  (+2 more)
verity/tests/: conftest.py
verity/tests/fixtures/: builders.py  canonical_seed.py  fakes.py
verity/tests/integration/: test_compliance_rename.py  test_registry_roundtrip.py  test_schema_applies.py
verity/tests/integration/api/: conftest.py  test_applications_endpoints.py  test_authoring_endpoints.py  test_compliance_meta_endpoints.py  test_decisions_endpoints.py  test_draft_edit_concurrency.py  test_draft_edit_endpoints.py  test_lifecycle_endpoints.py  test_models_endpoints.py  test_quotas_endpoints.py  test_registry_endpoints.py  test_reporting_endpoints.py  test_runs_endpoints.py  test_runtime_api_endpoints.py  test_usage_endpoints.py  test_where_used_endpoints.py  test_yaml_export_endpoints.py  test_yaml_import_endpoints.py
verity/tests/integration/cli/: test_yaml_cli.py
verity/tests/integration/compliance/: test_coverage_rollup.py  test_seed_data.py  test_seed_static.py
verity/tests/integration/db/: test_all_queries_parse.py  test_cross_schema_fk.py  test_migration_idempotent.py  test_named_query_extras.py  test_no_collisions.py  test_pool_concurrency.py  test_schema_applies.py
verity/tests/integration/engine/: conftest.py  test_delegation.py  test_gateway_llm.py  test_gateway_tool.py  test_resolve_sources.py  test_run_agent_errors.py  test_run_agent_happy.py  test_run_task_happy.py  test_run_tool.py  test_test_runner.py  test_test_runner_metrics.py  test_write_targets.py
verity/tests/integration/governance/: conftest.py  test_approval_gates.py  test_builders.py  test_champion_swap.py  test_lifecycle_transitions.py  test_rollback.py  test_yaml_export.py  test_yaml_import.py  test_yaml_roundtrip.py
verity/tests/integration/studio/: conftest.py  test_compose_configs.py  test_compose_prompts.py  test_compose_tools.py
verity/tests/integration/web/: conftest.py  test_smoke.py  test_smoke_extended.py
verity/tests/unit/: test_named_queries.py  test_sql_splitter.py
verity/tests/unit/models/: test_agent.py  test_application.py  test_inference_config.py  test_lifecycle.py  test_prompt.py  test_task.py  test_tool.py
(+310 files in other folders)
