[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "insurance-docgen"
version = "0.1.0"
description = "Insurance document generator - fill ACORD forms and text templates from JSON profiles"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "jinja2>=3.1",
    "pydantic>=2.0",
]

[project.scripts]
insurance-docgen = "insurance_docgen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
insurance_docgen = [
    "templates/pdf/*.pdf",
    "templates/text/*.j2",
    "templates/field_maps/*.json",
]
