[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verity"
version = "0.1.0"
description = "AI Trust & Compliance Framework — metamodel-driven governance for agents and tasks"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
    {name = "PremiumIQ"},
]

dependencies = [
    "psycopg[binary]>=3.1,<4",
    "psycopg_pool>=3.1,<4",
    "pydantic>=2.0,<3",
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
    "jinja2>=3.1,<4",
    "anthropic>=0.40,<1",
    "httpx>=0.27,<1",
    "minio>=7.2,<8",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
verity = "verity.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["verity*"]
