[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verity"
version = "0.1.0"
description = "AI Trust & Compliance Framework — metamodel-driven governance for agents and tasks"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
    {name = "PremiumIQ"},
]

# Base dependencies: everything the governance plane needs.
# Governance = registry, lifecycle, decision log reader, ground truth,
# testing metadata, admin UI, compliance reports. No LLM calls here, so
# no LLM SDK in base.
dependencies = [
    "psycopg[binary]>=3.1,<4",
    "psycopg_pool>=3.1,<4",
    "pydantic>=2.0,<3",
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
    "jinja2>=3.1,<4",
    "httpx>=0.27,<1",
    "minio>=7.2,<8",
    "python-multipart>=0.0.9",
    "python-json-logger>=3.0,<4",
]

[project.optional-dependencies]
# Runtime plane: adds what's needed to execute agents/tasks against an
# LLM. A container that only runs the governance plane does not install
# this group. A container that runs the runtime plane installs it via:
#   pip install -e verity/[runtime]
#
# The runtime engine uses Anthropic's official Claude Agent SDK for the
# agentic loop (tool dispatch, message management, session lifecycle).
# `anthropic` is kept as a transitive / low-level dep in case components
# need to touch the raw Messages API directly.
runtime = [
    "anthropic>=0.40,<1",
    "claude-agent-sdk>=0.1,<1",
]

# Developer tooling — tests, linters, type-checkers.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
verity = "verity.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["verity*"]
